--- a/templates/chats.html
+++ b/templates/chats.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container mt-3">
 {% block content %}
-<h3>Посты</h3>
+<h3>Список чатов</h3>
 <hr>
     <div class="row">
         {% for chat in chats %}
